--- a/style.css
+++ b/style.css
@@ -1,78 +1,57 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&display=swap');
-
-#header
-{
-
-    background:gold;
-    text-align: center;
-    word-spacing: 40px;
-    font-family: "Arimo", sans-serif;
-    font-optical-sizing: auto;
-    font-weight:bold;
+body {
+    background-image: url('computer.png');
+    background-size: cover;
+    background-attachment: fixed;
+    font-family: Arial, sans-serif;
     font-size: 25px;
-    font-style: normal;
-
-
-}
-.home-img
-{
-    width:60%;
-    margin-top: 100px;
+    margin: 0;
+    padding: 0;
 }
 
-.info 
-{
+header {
+    background-color: #333;
+    color: #fff;
+   /* color: #333;*/        /* to change the colour to Black of navigations text only */
+    padding: 1rem 0;
     text-align: center;
-    font-family: "Arimo", sans-serif;
-    font-optical-sizing: auto;
-    font-weight:italic ;
-    font-size: 20px;
-    font-style: normal;
-    /*width:70%;*/
-    /*border:3px red solid;*/
-
 }
 
-img
-{
-    width:100%;
-    height:60%;
-    
+nav ul {
+    list-style: none;
+    padding: 0;
 }
 
-.container
-{
-    display:flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin-top:100px;
-    margin-bottom: 100px;
-    /*align-items: center;*/
-
-
-}
-.item
-{
-    text-align:center;
-    font-size: 20px;
-    /*flex:1;
-    height:45%;
-    width:40%;
-    border:3px blue solid;*/ 
-    width:18%;
-
+nav ul li {
+    display: inline;
+    margin: 0 1rem;
 }
 
-#footer 
-{
-    background: gold;
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+    /*color: #333;*/  /* to change the colour of text in Header navigation bar*/
+}
+
+.container {
+   /* padding: 2rem;
+    margin: 1rem 0;*/
+    color: rgb(98, 136, 24);                      /* colour for the computer picture*/
     text-align: center;
-    word-spacing: 40px;
-    font-family: "Arimo", sans-serif;
-    font-optical-sizing: auto;
-    font-weight:bold;
     font-size: 25px;
-    font-style: normal;
+    /* background-color: #fff; */              /* to give it in box effect*/
+    /*border-radius: 1px;*/
+    border: 2px solid black; /* Adds a solid border */
+    padding: 20px;          /* Adds space inside the border */
+    margin: 20px;           /* Adds space outside the border */
+    background-color: lightgrey; /* Sets the background color */
+    width: 400px;           /* Sets the width of the box */
+    opacity: 0.8;
+}
 
+
+footer {
+    text-align: center;
+    padding: 1rem 0;
+    background-color: #333;
+    color: #fff;
 }
